use datatables for log display

--- a/interface/resources/html/dev-tools/log.html
+++ b/interface/resources/html/dev-tools/log.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Log</title>
+
+    <link rel="stylesheet" type="text/css" href="css/datatables.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/log.css"/>
+
+    <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="js/datatables.min.js"></script>
+    <script type="text/javascript" src="js/log.js"></script>
   </head>
   <body>
-      <h1>HELLO WORLD</h1>
+      <table id="log" class="hover cell-border row-border" width="100%"></table>
   </body>
 </html>
