add a toggle for verbosity of debug information

--- a/interface/resources/html/dev-tools/log.html
+++ b/interface/resources/html/dev-tools/log.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="js/log.js"></script>
   </head>
   <body>
+      <input type="checkbox" id="verbose-debug-checkbox" name="verbose-debug" value="verbose-debug"> Verbose Debug<br>
       <table id="log" class="hover cell-border row-border" width="100%"></table>
   </body>
 </html>
