switch off DataTables to bootstrap

--- a/interface/resources/html/dev-tools/log.html
+++ b/interface/resources/html/dev-tools/log.html
@@ -4,15 +4,27 @@
     <meta charset="UTF-8">
     <title>Log</title>
 
-    <link rel="stylesheet" type="text/css" href="css/datatables.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/log.css"/>
 
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="js/datatables.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/log.js"></script>
   </head>
   <body>
-      <label><input type="checkbox" id="verbose-debug-checkbox" value="verbose-debug"> Verbose Debug</label><br>
-      <table id="log" class="hover cell-border row-border" width="100%"></table>
+      <span class="button-checkbox">
+        <button type="button" class="btn" data-color="primary">Show Debug</button>
+        <input type="checkbox" id="verbose-debug-checkbox" class="hidden" />
+      </span>
+      <table class="table table-hover table-condensed table-bordered" id="log">
+        <thead>
+            <th>Time</th>
+            <th>Type</th>
+            <th>Message</th>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
   </body>
 </html>
