--- a/interface/resources/html/dev-tools/log.html
+++ b/interface/resources/html/dev-tools/log.html
@@ -13,23 +13,25 @@
         <script type="text/javascript" src="js/log.js"></script>
     </head>
     <body>
-        <div class="input-group">
-            <input type="text" id="filter-search" class="form-control" placeholder="Search">
-        </div>
-        <button type="button" class="btn btn-default" data-color="primary">Reveal Log File</button>
-        <span class="button-checkbox">
-            <button type="button" class="btn" data-color="primary">Hide Debug</button>
-            <input type="checkbox" id="verbose-debug-checkbox" class="hidden" checked="checked" />
-        </span>
+        <div class="container-fluid">
+            <div class="input-group">
+                <input type="text" id="filter-search" class="form-control" placeholder="Search">
+            </div>
+            <button type="button" id="reveal-log-btn" class="btn btn-default" data-color="primary">Reveal Log File</button>
+            <span class="button-checkbox">
+                <button type="button" class="btn" data-color="primary">Hide Debug</button>
+                <input type="checkbox" id="verbose-debug-checkbox" class="hidden" checked="checked" />
+            </span>
 
-        <table class="table table-hover table-condensed table-bordered" id="log">
-            <thead>
-                <th>Time</th>
-                <th>Type</th>
-                <th>Message</th>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
+            <table class="table table-hover table-condensed table-bordered" id="log">
+                <thead>
+                    <th>Time</th>
+                    <th>Type</th>
+                    <th>Message</th>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
     </body>
 </html>
