put top controls for log in a well

--- a/interface/resources/html/dev-tools/log.html
+++ b/interface/resources/html/dev-tools/log.html
@@ -14,15 +14,17 @@
     </head>
     <body>
         <div class="container-fluid">
-            <div class="input-group">
-                <input type="text" id="filter-search" class="form-control" placeholder="Search">
+            <div class="well">
+                <div class="input-group">
+                    <input type="text" id="filter-search" class="form-control" placeholder="Search">
+                </div>
+                <button type="button" id="reveal-log-btn" class="btn btn-default" data-color="primary">Reveal Log File</button>
+                <span class="button-checkbox">
+                    <button type="button" class="btn" data-color="primary">Hide Debug</button>
+                    <input type="checkbox" id="verbose-debug-checkbox" class="hidden" checked="checked" />
+                </span>
             </div>
-            <button type="button" id="reveal-log-btn" class="btn btn-default" data-color="primary">Reveal Log File</button>
-            <span class="button-checkbox">
-                <button type="button" class="btn" data-color="primary">Hide Debug</button>
-                <input type="checkbox" id="verbose-debug-checkbox" class="hidden" checked="checked" />
-            </span>
-
+            
             <table class="table table-hover table-condensed table-bordered" id="log">
                 <thead>
                     <th>Time</th>
