--- a/interface/resources/html/dev-tools/log.html
+++ b/interface/resources/html/dev-tools/log.html
@@ -13,7 +13,7 @@
         <script type="text/javascript" src="js/log.js"></script>
     </head>
     <body>
-        <div id="log-container" class="container-fluid">
+        <div id ="fixed-bar">
             <div class="well" id="option-well">
                 <div class="input-group" id="search-group">
                     <input type="text" id="search-input" class="form-control" placeholder="Search">
@@ -24,7 +24,8 @@
                     <input type="checkbox" id="hide-debug-checkbox" class="hidden" checked="checked" />
                 </span>
             </div>
-
+        </div>
+        <div id="log-container" class="container-fluid">
             <table class="table table-hover table-condensed table-bordered" id="log">
                 <thead>
                     <th>Time</th>
