--- a/interface/resources/html/dev-tools/log.html
+++ b/interface/resources/html/dev-tools/log.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="../js/qwebchannel.js"</script>
         <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/checkbox-button.js"></script>
         <script type="text/javascript" src="js/log.js"></script>
     </head>
     <body>
